[project]
name = "mlbb-teambot"
version = "1.0.0"
description = "MLBB Team Finder Bot"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram==3.2.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
